# unmasking-trees

./: .gitattributes  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  extra_requirements.txt  iris-demo.ipynb  moons-demo.ipynb  moons-discretize.ipynb  pyproject.toml  requirements.txt  script_generation.py  script_imputation.py  setup.py
Results/: Results_tabular - generation_miss.csv  all_tabular_imputation_results.txt  generation_script.R  generation_script_nmiss50.R  imputation_script.R  latex_generation_baltobot4d8f71b.txt  latex_generation_wmissing_baltobot4d8f71b.txt  latex_imputation_ablation_baltobot4d8f71b.txt  latex_imputation_baltobot4d8f71b.txt  latex_tables.txt  tabular_generation_results.txt  tabular_generation_results_baltobot4d8f71b.txt  tabular_generation_wmissing_results.txt  tabular_generation_wmissing_results_baltobot4d8f71b.txt  tabular_imputation_results.txt  tabular_imputation_results_baltobot4d8f71b.txt  tabular_imputation_results_kmeans.txt  tabular_imputation_results_tobt.txt
paper/: baltobot-simple-demo.ipynb  baltobotmodel.py  iris.ipynb  m5-ppc-notebook-baltobot-notuning.ipynb  m5-ppc-notebook-baltobot.ipynb  missforest.py  moons.ipynb  poisson.ipynb  wave.ipynb
tests/: test_imports.py
tests/utrees/: test_baltobot.py  test_utrees.py
utrees/: __init__.py  baltobot.py  kdi_quantizer.py  tobt.py  unmasking_trees.py
