[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "utrees"
version = "0.3.0"
description = "Unmasking trees for tabular data generation and imputation"
readme = "README.md"
authors = [
    { name = "Calvin McCarter", email = "mccarter.calvin@gmail.com" },
]
maintainers = [
    { name = "Calvin McCarter", email = "mccarter.calvin@gmail.com" },
]
keywords = [
    "generation",
    "imputation",
    "tabular",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "kditransform",
    "numba >= 0.48",
    "numpy",
    "pandas",
    "scikit-learn >= 0.23",
    "scipy >= 1.0",
    "tqdm",
    "xgboost",
]

[project.urls]
Homepage = "http://github.com/calvinmccarter/unmasking-trees"
